project: dockerize dev environment
Add `docker-compose` for local development

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "tsc": "tsc",
+    "start:dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,14 +19,18 @@
   },
   "homepage": "https://github.com/davisokoth/egw-api#readme",
   "dependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/elasticsearch": "^5.0.32",
+    "dotenv": "8.0.0",
     "elasticsearch": "^15.4.1",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^3.2.0",
     "type-graphql": "^0.17.3"
   },
   "devDependencies": {
     "@types/node": "^11.13.8",
     "nodemon": "^1.19.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "ts-node": "^8.1.0"
   }
 }
