--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,39 @@
-version: '2.2'
+version: '2'
 services:
-  es01:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.0.1
-    container_name: es01
-    environment:
-      - node.name=es01
-      - discovery.seed_hosts=es02
-      - cluster.initial_master_nodes=es01,es02
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
+
+  server:
+    command: npm run start:dev
+    build: .
     volumes:
-      - esdata01:/usr/share/elasticsearch/data
+      - ./:/home/node # same folder structure on local machine and docker container
+    working_dir: /home/node
+    ports:
+      - "3001:3001" # open port for server api
+      - "9222:9222" # open port for inspector to debug
+    links:
+      - elasticsearch
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.0.1
+    container_name: elasticsearch
+    environment:
+      - http.host=0.0.0.0
+      - discovery.type=single-node
+      - transport.host=0.0.0.0
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
-    networks:
-      - esnet
-  es02:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.0.1
-    container_name: es02
-    environment:
-      - node.name=es02
-      - discovery.seed_hosts=es01
-      - cluster.initial_master_nodes=es01,es02
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - 9300:9300
     ulimits:
       memlock:
         soft: -1
         hard: -1
-    volumes:
-      - esdata02:/usr/share/elasticsearch/data
-    networks:
-      - esnet
-
+      nofile:
+        soft: 65536
+        hard: 65536
+    mem_limit: 2g
 volumes:
-  esdata01:
+  esdata:
     driver: local
-  esdata02:
-    driver: local
-
-networks:
-  esnet:
