project: temporarily disable `jest` types in `tsconfig.json`
`Jest` not yet set up so temporarily disabling jest types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,7 +51,7 @@
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     "types": [
-      "jest",
+      // "jest",
       "reflect-metadata",
       "node"
     ],                           /* Type declaration files to be included in compilation. */
@@ -69,6 +69,6 @@
     "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     "emitDecoratorMetadata": true         /* Enables experimental support for emitting type metadata for decorators. */
   },
-  "include": ["./src/**/"],
+  // "include": ["./src/**/*.ts"],
   "exclude": ["node_modules", "test"]
 }
